--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ commands:
           command: |
             aws cloudformation delete-stack --stack-name backendStack
             aws cloudformation delete-stack --stack-name frontendStack
-            aws s3 rm s3://udapeople-6286b --recursive 
+            aws s3 rm s3://udapeople-0d77c --recursive 
             
   notify_on_failure:
     steps:
@@ -276,8 +276,8 @@ jobs:
           command: |
             export BACKEND_PUBLIC_IP=$(aws ec2 describe-instances --region us-east-1 --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             
-            URL="http://$BACKEND_PUBLIC_IP:3030/api/status"
-            # URL="http://g00gle.com"
+            # URL="http://$BACKEND_PUBLIC_IP:3030/api/status"
+            URL="http://g00gle.com"
             if curl -s --head ${URL}
             then
               echo "It worked!"
@@ -288,7 +288,7 @@ jobs:
             fi
       # - notify_on_failure
       # - notify_on_success
-      # - destroy_environment
+      - destroy_environment
       - revert-migrations 
 
   cloudfront-update: 
@@ -349,22 +349,22 @@ workflows:
       #    requires: [build-backend]
       #- scan-frontend:
       #    requires: [build-frontend]
-      - deploy-infrastructure:
-        # requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-          filters: 
-            branches: 
-              only: [master]   
-      - configure-infrastructure: 
-          requires: [deploy-infrastructure]
-      - run-migrations:  
-          requires: [configure-infrastructure]
-      - deploy-frontend:
-         requires: [run-migrations]
-      - deploy-backend:
-         requires: [run-migrations]
-      - smoke-test:
-         requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
-         requires: [smoke-test]
+      # - deploy-infrastructure:
+      #   # requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      #     filters: 
+      #       branches: 
+      #         only: [master]   
+      # - configure-infrastructure: 
+      #     requires: [deploy-infrastructure]
+      # - run-migrations:  
+      #     requires: [configure-infrastructure]
+      # - deploy-frontend:
+      #    requires: [run-migrations]
+      # - deploy-backend:
+      #    requires: [run-migrations]
+      - smoke-test
+      #    requires: [deploy-backend, deploy-frontend]
+      # - cloudfront-update:
+      #    requires: [smoke-test]
       #- cleanup:
       #    requires: [cloudfront-update]
