--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -289,7 +289,7 @@ jobs:
       # - notify_on_failure
       # - notify_on_success
       - destroy_environment
-      - revert-migrations 
+      - revert-migrations
 
   cloudfront-update: 
     docker:
@@ -349,20 +349,20 @@ workflows:
       #    requires: [build-backend]
       #- scan-frontend:
       #    requires: [build-frontend]
-      # - deploy-infrastructure:
-      #   # requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #     filters: 
-      #       branches: 
-      #         only: [master]   
-      # - configure-infrastructure: 
-      #     requires: [deploy-infrastructure]
-      # - run-migrations:  
-      #     requires: [configure-infrastructure]
-      # - deploy-frontend:
-      #    requires: [run-migrations]
-      # - deploy-backend:
-      #    requires: [run-migrations]
-      - smoke-test
+      - deploy-infrastructure:
+        # requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters: 
+            branches: 
+              only: [master]   
+      - configure-infrastructure: 
+          requires: [deploy-infrastructure]
+      - run-migrations:  
+          requires: [configure-infrastructure]
+      - deploy-frontend:
+         requires: [run-migrations]
+      - deploy-backend:
+         requires: [run-migrations]
+      # - smoke-test:
       #    requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
       #    requires: [smoke-test]
