--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -322,7 +322,7 @@ jobs:
           command: |
             export OldWorkflowID=$(aws cloudformation \
                 list-exports --query "Exports[?Name==\'WorkflowID\'].Value" \
-                --no-paginate --output text)) 
+                --no-paginate --output text)
 
             export STACKS=($(aws cloudformation list-stacks \
                 --query "StackSummaries[*].StackName" \
