--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -342,16 +342,16 @@ jobs:
 workflows:
   default:
     jobs:
-      #- build-frontend
-      # - build-backend
-      #- test-frontend:
-      #    requires: [build-frontend]
-      # - test-backend:
-      #    requires: [build-backend]
-      # - scan-backend:
-      #    requires: [build-backend]
-      #- scan-frontend:
-      #    requires: [build-frontend]
+      - build-frontend
+      - build-backend
+      - test-frontend:
+         requires: [build-frontend]
+      - test-backend:
+         requires: [build-backend]
+      - scan-backend:
+         requires: [build-backend]
+      - scan-frontend:
+         requires: [build-frontend]
       - deploy-infrastructure:
         # requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters: 
@@ -365,9 +365,9 @@ workflows:
          requires: [run-migrations]
       - deploy-backend:
          requires: [run-migrations]
-      # - smoke-test:
-      #    requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
+      - smoke-test:
          requires: [deploy-backend, deploy-frontend]
-      # - cleanup:
-      #    requires: [cloudfront-update]
+      - cloudfront-update:
+         requires: [smoke-test]
+      - cleanup:
+         requires: [cloudfront-update]
